deployment/deployment.yaml
---
# Source: rabbitmq/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
  labels:
    app: rabbitmq
    chart: rabbitmq-6.2.6
    release: "rabbitmq"
    heritage: "Tiller"
spec:
  clusterIP: None
  ports:
  - name: epmd
    port: 4369
    targetPort: epmd
  - name: amqp
    port: 5672
    targetPort: amqp
  - name: dist
    port: 25672
    targetPort: dist
  - name: stats
    port: 15672
    targetPort: stats
  selector:
    app: rabbitmq
    release: "rabbitmq"

---
# Source: rabbitmq/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    chart: rabbitmq-6.2.6
    release: "rabbitmq"
    heritage: "Tiller"
  annotations:
    prometheus.io/port: "9090"
    prometheus.io/scrape: "true"
    
spec:
  type: ClusterIP
  ports:
  - name: epmd
    port: 4369
    targetPort: epmd
  - name: amqp
    port: 5672
    targetPort: amqp
  - name: dist
    port: 25672
    targetPort: dist
  - name: stats
    port: 15672
    targetPort: stats
  - name: metrics
    port: 9090
    targetPort: metrics
  selector:
    app: rabbitmq
    release: "rabbitmq"

---
# Source: rabbitmq/templates/statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    chart: rabbitmq-6.2.6
    release: "rabbitmq"
    heritage: "Tiller"
spec:
  serviceName: rabbitmq-headless
  podManagementPolicy: OrderedReady
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: rabbitmq
      release: "rabbitmq"
  template:
    metadata:
      labels:
        app: rabbitmq
        release: "rabbitmq"
        chart: rabbitmq-6.2.6
    spec:      
      serviceAccountName: rabbitmq
      terminationGracePeriodSeconds: 10
      containers:
      - name: rabbitmq
        image: docker.io/bitnami/rabbitmq:3.7.17-debian-9-r10
        imagePullPolicy: "IfNotPresent"
        command:
         - bash
         - -ec
         - |
           [...]
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          
        volumeMounts:
          - name: config-volume
            mountPath: /opt/bitnami/rabbitmq/conf
          - name: data
            mountPath: "/opt/bitnami/rabbitmq/var/lib/rabbitmq"
          - name: load-definition-volume
            mountPath: /app
            readOnly: true
        ports:
        - name: epmd
          containerPort: 4369
        - name: amqp
          containerPort: 5672
        - name: dist
          containerPort: 25672
        - name: stats
          containerPort: 15672
        livenessProbe:
          exec:
            command:
              - sh
              - -c
              - rabbitmq-api-check "http://admin:$RABBITMQ_PASSWORD@127.0.0.1:15672/api/healthchecks/node" '{"status":"ok"}' 
          initialDelaySeconds: 120
          timeoutSeconds: 20
          periodSeconds: 30
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - rabbitmq-health-check "http://admin:$RABBITMQ_PASSWORD@127.0.0.1:15672/api/healthchecks/node" '{"status":"ok"}'
          initialDelaySeconds: 10
          timeoutSeconds: 20
          periodSeconds: 30
          failureThreshold: 3
          successThreshold: 1
      - name: metrics
        image: docker.io/kbudde/rabbitmq-exporter:v0.29.0
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: metrics
          containerPort: 9090
        livenessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          {}
          
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      volumes:
        - name: config-volume
          configMap:
            name: rabbitmq-config
            items:
            - key: rabbitmq.conf
              path: rabbitmq.conf      
            - key: enabled_plugins
              path: enabled_plugins
        - name: load-definition-volume
          secret:
            secretName: "rabbitmq-load-definition"
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: rabbitmq
          release: "rabbitmq"
          heritage: "Tiller"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
            requests:
              storage: "8Gi"

---
# Source: rabbitmq/templates/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "rabbitmq"
  labels:
    app: "rabbitmq"
    chart: "rabbitmq-6.2.6"
    release: "rabbitmq"
    heritage: "Tiller"
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    certmanager.k8s.io/acme-challenge-type: "http01"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: rmq.mytunnel.me
    http:
      paths:
        - path: /
          backend:
            serviceName: rabbitmq
            servicePort: 15672
  tls:
  - hosts:
    - rmq.mytunnel.me
    secretName: rmq-tls-prod

---
# Source: rabbitmq/templates/servicemonitor.yaml
